--- a/budget/templates/budget/base2.html
+++ b/budget/templates/budget/base2.html
@@ -28,7 +28,7 @@
     }
 </style>
 
-<nav class="navbar navbar-dark bg-dark bg-opacity-25 fixed-top">
+<nav class="navbar navbar-dark bg-dark bg-opacity-25 fixed-top mb-4">
     <div class="container-fluid">
         <div class="d-flex align-items-center ms-1 mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
             <a href="{% url 'index' %}"><img src="https://i.postimg.cc/mkTNPStd/easy-budget-logo.png" alt="" class="bi me-2" width="127"
