--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -20,8 +20,22 @@
                                 <p>first name: {{ user.first_name }}</p>
                                 <p>last name: {{ user.last_name }}</p>
                                 <p>email: {{ user.email }}</p>
+                                <p>funds: ${{ user.profile.funds }}</p>
                         </div>
                     </div>
+                </div>
+                <div class="row">
+                    <form method="POST" class="my-4 mx-4 text-light col">
+                        {% csrf_token %}
+                        <div class="row">
+                            <div class="col-4 form-group py-1">
+                                <label for="name">Edit Funds</label>
+                                {{ form.funds }}
+                            </div>
+                        </div>
+
+                        <button type="submit" class="btn btn-primary btn-custom-1 px-5">Submit</button>
+                    </form>
                 </div>
             </div>
         </div>
