--- a/budget/templates/budget/base.html
+++ b/budget/templates/budget/base.html
@@ -3,20 +3,23 @@
 <html lang="en">
 
 <head>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="preconnect" href="https://fonts.googlapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Sintony&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <!--chart js-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" integrity="sha256-Uv9BNBucvCPipKQ2NS9wYpJmi8DTOEfTA/nH2aoJALw=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.css" integrity="sha256-aa0xaJgmK/X74WM224KMQeNQC2xYKwlAt08oZqjeF0E=" crossorigin="anonymous" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"
+            integrity="sha256-Uv9BNBucvCPipKQ2NS9wYpJmi8DTOEfTA/nH2aoJALw=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.css"
+          integrity="sha256-aa0xaJgmK/X74WM224KMQeNQC2xYKwlAt08oZqjeF0E=" crossorigin="anonymous"/>
     <!--jQuery-->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <link rel="stylesheet" href="{% static 'budget/custom.css' %}">
@@ -25,131 +28,142 @@
 </head>
 
 <body>
-    <style>
-        body {
-            background-color: #1a2f4b;
-            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 2 1'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='0' x2='0' y1='0' y2='1'%3E%3Cstop offset='0' stop-color='%231A2F4B'/%3E%3Cstop offset='1' stop-color='%2334495D'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='0' y1='0' x2='0' y2='1'%3E%3Cstop offset='0' stop-color='%231D5452' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%231D5452' stop-opacity='1'/%3E%3C/linearGradient%3E%3ClinearGradient id='c' gradientUnits='userSpaceOnUse' x1='0' y1='0' x2='2' y2='2'%3E%3Cstop offset='0' stop-color='%231D5452' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%231D5452' stop-opacity='1'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect x='0' y='0' fill='url(%23a)' width='2' height='1'/%3E%3Cg fill-opacity='0.5'%3E%3Cpolygon fill='url(%23b)' points='0 1 0 0 2 0'/%3E%3Cpolygon fill='url(%23c)' points='2 1 2 0 0 0'/%3E%3C/g%3E%3C/svg%3E");
-            background-attachment: fixed;
-            background-size: cover;
-        }
-    </style>
+<style>
+    body {
+        background-color: #1a2f4b;
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 2 1'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='0' x2='0' y1='0' y2='1'%3E%3Cstop offset='0' stop-color='%231A2F4B'/%3E%3Cstop offset='1' stop-color='%2334495D'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='0' y1='0' x2='0' y2='1'%3E%3Cstop offset='0' stop-color='%231D5452' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%231D5452' stop-opacity='1'/%3E%3C/linearGradient%3E%3ClinearGradient id='c' gradientUnits='userSpaceOnUse' x1='0' y1='0' x2='2' y2='2'%3E%3Cstop offset='0' stop-color='%231D5452' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%231D5452' stop-opacity='1'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect x='0' y='0' fill='url(%23a)' width='2' height='1'/%3E%3Cg fill-opacity='0.5'%3E%3Cpolygon fill='url(%23b)' points='0 1 0 0 2 0'/%3E%3Cpolygon fill='url(%23c)' points='2 1 2 0 0 0'/%3E%3C/g%3E%3C/svg%3E");
+        background-attachment: fixed;
+        background-size: cover;
+    }
+</style>
 
-    {%block scripts%}
-    {%endblock scripts%}
-    
-    <div class="container-fluid">
-        {% if messages %}
-                {% for message in messages %}
-                    <div class="alert alert-{{ message.tags }}">
-                        {{ message }}
-                    </div>
-                {% endfor %}
-            {% endif %}
-        <div class="row flex-nowrap">
-            <div
+{% block scripts %}
+{% endblock scripts %}
+
+<div class="container-fluid">
+    {% if messages %}
+        {% for message in messages %}
+            <div class="alert alert-{{ message.tags }}">
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endif %}
+    <div class="row flex-nowrap">
+        <div
                 class="d-none d-sm-block d-sm-block d-sm-none d-md-block col-auto col-xl-2 px-sm-2 px-0 bg-dark bg-opacity-25">
-                <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
-                    <div style="background-color: #2F8886; width: 100%" class="card text-white bg-opacity-25">
-                        <div class="card-body align-items-center py-4">
-                            <h3 class="card-text text-center py-0 my-0">${{ user.profile.funds }}</h3>
-                            <p class="card-text text-center py-0 my-0"><small>Remaining Balance</small></p>
-                        </div>
+            <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
+                <div style="background-color: #2F8886; width: 100%" class="card text-white bg-opacity-25">
+                    <div class="card-body align-items-center py-4">
+                        <h3 class="card-text text-center py-0 my-0">${{ user.profile.funds }}</h3>
+                        <p class="card-text text-center py-0 my-0"><small>Remaining Balance</small></p>
                     </div>
-                    <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start pt-2 text-white">
-                        <li class="nav-item">
-                            <a {% if request.resolver_match.url_name == 'dashboard' %}class="nav-link active"{% endif %} href="{% url 'dashboard' %}" class="nav-link">
-                                <i class="bi bi-grid text-white"></i><span
-                                    class="ms-1 d-none d-sm-inline text-white">Dashboard</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a {% if request.resolver_match.url_name == 'transactions' %}class="nav-link active"{% endif %} href="{% url 'transactions' %}" class="nav-link">
-                                <i class="bi bi-credit-card-2-front text-white"></i><span
-                                    class="ms-1 d-none d-sm-inline text-white">Transactions</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a {% if request.resolver_match.url_name == 'budget' %}class="nav-link active"{% endif %} href="{% url 'budget' %}" class="nav-link">
-                                <i class="bi bi-pie-chart text-white"></i><span
-                                    class="ms-1 d-none d-sm-inline text-white">Budgets</span>
-                            </a>
-                            </a>
-                        </li>
-                        <li>
-                            <a {% if request.resolver_match.url_name == 'reports' %}class="nav-link active"{% endif %} href="{% url 'reports' %}" class="nav-link">
-                                <i class="bi bi-graph-up-arrow text-white"></i> <span
-                                    class="ms-1 d-none d-sm-inline text-white">Reports</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a {% if request.resolver_match.url_name == 'profile' %}class="nav-link active"{% endif %} href="{% url 'profile' %}" class="nav-link">
-                                <i class="bi bi-person text-white"></i><span
-                                    class="ms-1 d-none d-sm-inline text-white">User
+                </div>
+                <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start pt-2 text-white">
+                    <li class="nav-item">
+                        <a {% if request.resolver_match.url_name == 'dashboard' %}class="nav-link active"{% endif %}
+                           href="{% url 'dashboard' %}" class="nav-link">
+                            <i class="bi bi-grid text-white"></i><span
+                                class="ms-1 d-none d-sm-inline text-white">Dashboard</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a {% if request.resolver_match.url_name == 'transactions' %}class="nav-link active"{% endif %}
+                           href="{% url 'transactions' %}" class="nav-link">
+                            <i class="bi bi-credit-card-2-front text-white"></i><span
+                                class="ms-1 d-none d-sm-inline text-white">Transactions</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a {% if request.resolver_match.url_name == 'budget' %}class="nav-link active"{% endif %}
+                           href="{% url 'budget' %}" class="nav-link">
+                            <i class="bi bi-pie-chart text-white"></i><span
+                                class="ms-1 d-none d-sm-inline text-white">Budgets</span>
+                        </a>
+                        </a>
+                    </li>
+                    <li>
+                        <a {% if request.resolver_match.url_name == 'reports' %}class="nav-link active"{% endif %}
+                           href="{% url 'reports' %}" class="nav-link">
+                            <i class="bi bi-graph-up-arrow text-white"></i> <span
+                                class="ms-1 d-none d-sm-inline text-white">Reports</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a {% if request.resolver_match.url_name == 'profile' %}class="nav-link active"{% endif %}
+                           href="{% url 'profile' %}" class="nav-link">
+                            <i class="bi bi-person text-white"></i><span
+                                class="ms-1 d-none d-sm-inline text-white">User
                                     Profile</span>
-                            </a>
-                        </li>
-                        <li>
-                            {% if user.is_authenticated %}
+                        </a>
+                    </li>
+                    <li>
+                        {% if user.is_authenticated %}
                             <a href="{% url 'logout' %}" class="nav-link"><i
                                     class="bi bi-box-arrow-left text-white"></i><span
                                     class="ms-1 d-none d-sm-inline text-white">Logout</span></a>
-                            {% else %}
+                        {% else %}
                             <a href="{% url 'login' %}" class="nav-link"><i
                                     class="bi bi-box-arrow-in-right text-white"></i><span
                                     class="ms-1 d-none d-sm-inline text-white">Login</span></a>
-                            {% endif %}
-                        </li>
-                    </ul>
-                </div>
+                        {% endif %}
+                    </li>
+                </ul>
             </div>
-
-            {% block body %}
-            {% endblock %}
-
         </div>
 
-    </div>
-    <div class="d-flex justify-content-center py-3 d-block d-sm-block d-md-none">
-        <ul class="nav fixed-bottom bg-dark bg-opacity-25 auto justify-content-center my-md-0 text-small">
-            <li>
-                <a {% if request.resolver_match.url_name == 'dashboard' %}class="nav-link mobile-active text-white text-center"{% endif %} href="{% url 'dashboard' %}" class="nav-link text-white text-center">
-                    <i class="bi bi-grid"></i><span class="text-white"><br>Dashboard</span>
-                </a>
-            </li>
-            <li>
-                <a {% if request.resolver_match.url_name == 'transactions' %}class="nav-link mobile-active text-white text-center"{% endif %} href="{% url 'transactions' %}" class="nav-link text-white text-center">
-                    <i class="bi bi-credit-card-2-front text-white"></i><span class="text-white"><br>Transactions</span>
-                </a>
-            </li>
-            <li>
-                <a {% if request.resolver_match.url_name == 'budget' %}class="nav-link mobile-active text-white text-center"{% endif %} href="{% url 'budget' %}" class="nav-link text-white text-center">
-                    <i class="bi bi-pie-chart text-white"></i><span class="text-white"><br>Budgets</span>
-                </a>
-            </li>
-            <li>
-                <a {% if request.resolver_match.url_name == 'url' %}class="nav-link mobile-active text-white text-center"{% endif %} href="{% comment %}{% url 'category-form' %}{% endcomment %}"
-                    class="nav-link text-white text-center">
-                    <i class="bi bi-diagram-2 text-white"></i><span class="text-white"><br>Categories</span>
-                </a>
-            </li>
-            <li>
-                <a {% if request.resolver_match.url_name == 'reports' %}class="nav-link mobile-active text-white text-center"{% endif %} href="{% url 'reports' %}" class="nav-link text-white text-center">
-                    <i class="bi bi-graph-up-arrow text-white"></i> <span class="text-white"><br>Reports</span>
-                </a>
-            </li>
-            <li>
-                <a {% if request.resolver_match.url_name == 'profile' %}class="nav-link mobile-active text-white text-center"{% endif %} href="{% url 'profile' %}" class="nav-link text-white text-center">
-                    <i class="bi bi-person text-white"></i><span class="text-white"><br>User
-                        Profile</span>
-                </a>
-            </li>
-        </ul>
+        {% block body %}
+        {% endblock %}
+
     </div>
 
-    {% comment %}{% block body %}
+</div>
+<div class="d-flex justify-content-center py-3 d-block d-sm-block d-md-none">
+    <ul class="nav fixed-bottom bg-dark bg-opacity-25 auto justify-content-center my-md-0 text-small">
+        <li>
+            <a {% if request.resolver_match.url_name == 'dashboard' %}class="nav-link mobile-active text-white text-center"{% endif %}
+               href="{% url 'dashboard' %}" class="nav-link text-white text-center">
+                <i class="bi bi-grid"></i><span class="text-white"><br>Dashboard</span>
+            </a>
+        </li>
+        <li>
+            <a {% if request.resolver_match.url_name == 'transactions' %}class="nav-link mobile-active text-white text-center"{% endif %}
+               href="{% url 'transactions' %}" class="nav-link text-white text-center">
+                <i class="bi bi-credit-card-2-front text-white"></i><span class="text-white"><br>Transactions</span>
+            </a>
+        </li>
+        <li>
+            <a {% if request.resolver_match.url_name == 'budget' %}class="nav-link mobile-active text-white text-center"{% endif %}
+               href="{% url 'budget' %}" class="nav-link text-white text-center">
+                <i class="bi bi-pie-chart text-white"></i><span class="text-white"><br>Budgets</span>
+            </a>
+        </li>
+        <li>
+            <a {% if request.resolver_match.url_name == 'url' %}class="nav-link mobile-active text-white text-center"{% endif %}
+               href="{% comment %}{% url 'category-form' %}{% endcomment %}"
+               class="nav-link text-white text-center">
+                <i class="bi bi-diagram-2 text-white"></i><span class="text-white"><br>Categories</span>
+            </a>
+        </li>
+        <li>
+            <a {% if request.resolver_match.url_name == 'reports' %}class="nav-link mobile-active text-white text-center"{% endif %}
+               href="{% url 'reports' %}" class="nav-link text-white text-center">
+                <i class="bi bi-graph-up-arrow text-white"></i> <span class="text-white"><br>Reports</span>
+            </a>
+        </li>
+        <li>
+            <a {% if request.resolver_match.url_name == 'profile' %}class="nav-link mobile-active text-white text-center"{% endif %}
+               href="{% url 'profile' %}" class="nav-link text-white text-center">
+                <i class="bi bi-person text-white"></i><span class="text-white"><br>User
+                        Profile</span>
+            </a>
+        </li>
+    </ul>
+</div>
+
+{% comment %}{% block body %}
     {% endblock %}{% endcomment %}
 
-    {% comment %}<nav class="navbar navbar-dark bg-dark">
+{% comment %}<nav class="navbar navbar-dark bg-dark">
         <a class="navbar-brand" href="#">Footer</a>
     </nav>{% endcomment %}
 
