--- a/budget/templates/budget/base2.html
+++ b/budget/templates/budget/base2.html
@@ -3,7 +3,8 @@
 <html lang="en">
 
 <head>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
@@ -31,8 +32,9 @@
 <nav class="navbar navbar-dark bg-dark bg-opacity-25 fixed-top mb-4">
     <div class="container-fluid">
         <div class="d-flex align-items-center ms-1 mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-            <a href="{% url 'index' %}"><img src="https://i.postimg.cc/mkTNPStd/easy-budget-logo.png" alt="" class="bi me-2" width="127"
-                 height="32"></a>
+            <a href="{% url 'index' %}"><img src="https://i.postimg.cc/mkTNPStd/easy-budget-logo.png" alt=""
+                                             class="bi me-2" width="127"
+                                             height="32"></a>
         </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbarDark"
                 aria-controls="offcanvasNavbarDark">
@@ -41,17 +43,24 @@
         <div class="offcanvas offcanvas-end bg-dark bg-opacity-50" tabindex="-1" id="offcanvasNavbarDark"
              aria-labelledby="offcanvasNavbarDarkLabel">
             <div class="offcanvas-header">
-                <a href="{% url 'index' %}"><img src="https://i.postimg.cc/mkTNPStd/easy-budget-logo.png" alt="" class="offcanvas-title bi me-2" width="127"
-                 height="32"></a>
+                <a href="{% url 'index' %}"><img src="https://i.postimg.cc/mkTNPStd/easy-budget-logo.png" alt=""
+                                                 class="offcanvas-title bi me-2" width="127"
+                                                 height="32"></a>
                 <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
                         aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
                 <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                <li class="nav-item"><a {% if request.resolver_match.url_name == 'index' %}class="nav-link active"{% endif %} href="{% url 'index' %}" class="nav-link">Home</a></li>
-                    <li class="nav-item"><a {% if request.resolver_match.url_name == 'register' %}class="nav-link active"{% endif %} href="{% url 'register' %}" class="nav-link">Sign
+                    <li class="nav-item"><a
+                            {% if request.resolver_match.url_name == 'index' %}class="nav-link active"{% endif %}
+                            href="{% url 'index' %}" class="nav-link">Home</a></li>
+                    <li class="nav-item"><a
+                            {% if request.resolver_match.url_name == 'register' %}class="nav-link active"{% endif %}
+                            href="{% url 'register' %}" class="nav-link">Sign
                         Up</a></li>
-                    <li class="nav-item"><a {% if request.resolver_match.url_name == 'login' %}class="nav-link active"{% endif %} href="{% url 'login' %}" class="nav-link">Login</a></li>
+                    <li class="nav-item"><a
+                            {% if request.resolver_match.url_name == 'login' %}class="nav-link active"{% endif %}
+                            href="{% url 'login' %}" class="nav-link">Login</a></li>
                 </ul>
             </div>
         </div>
