--- a/budget/templates/budget/transaction-delete.html
+++ b/budget/templates/budget/transaction-delete.html
@@ -1,14 +1,41 @@
 {% extends 'budget/base.html' %}
 
 {% block body %}
-
-<h1>Welcome to the DELETE TRANSACTION PAGE!</h1>
-<br>
-<form method="POST">
-    {% csrf_token %}
-    <h2>Are you sure you want to delete this transaction?</h2>
-    <button type="submit" class="btn btn-success btn-green btn-custom-1 px-3">Yes</button>
-    <a href="{% url 'transactions' %}" class="btn btn-danger btn-red btn-green btn-custom-1 px-3">No</a>
-</form>
+    <div class="my-5 mx-4">
+        <form method="POST">
+            {% csrf_token %}
+            <h2>Are you sure you want to delete this transaction?</h2>
+            <div class="text-white">
+                {{ test }}
+            </div>
+            <div class="text-white table-responsive col-md-8">
+                <table class="table">
+                    <tbody>
+                        <thead>
+                            <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">Type</th>
+                                <th scope="col">Label</th>
+                                <th scope="col">Description</th>
+                                <th scope="col">Date</th>
+                                <th scope="col">Amount</th>
+                                <th></th>
+                            </tr>
+                        </thead>
+                        <tr>
+                            <th scope="row">{{ transaction.id }}</th>
+                            <th scope="row">{{ transaction.type }}</th>
+                            <td>{{ transaction.label }}</td>
+                            <td>{{ transaction.description }}</td>
+                            <td>{{ transaction.date }}</td>
+                            <td>${{ transaction.amount }}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <button type="submit" class="btn btn-success px-3">Yes</button>
+            <a href="{% url 'transactions' %}" class="btn btn-danger px-3">No</a>
+        </form>
+    </div>
 
 {% endblock %}
