--- a/budget/templates/budget/dashboard.html
+++ b/budget/templates/budget/dashboard.html
@@ -11,12 +11,12 @@
     {{ transaction_type|json_script:"transaction_type" }}
     {{ transaction_label|json_script:"transaction_label" }}
     {{ transaction_amount|json_script:"transaction_amount" }}
-    {{ transaction_date|json_script:"transaction_date" }}  
-    {{ categoryTypeSum|json_script:"categoryTypeSum"}}
-    {{ transactionAmountSum|json_script:"transactionAmountSum"}}
-    {{ sums|json_script:"sums"}}
-    {{ sumLabels|json_script:"sumLabels"}}
-    {{ receivedSums|json_script:"receivedSums"}}
+    {{ transaction_date|json_script:"transaction_date" }}
+    {{ categoryTypeSum|json_script:"categoryTypeSum" }}
+    {{ transactionAmountSum|json_script:"transactionAmountSum" }}
+    {{ sums|json_script:"sums" }}
+    {{ sumLabels|json_script:"sumLabels" }}
+    {{ receivedSums|json_script:"receivedSums" }}
 
 
     <div class="col py-3">
@@ -33,8 +33,6 @@
                             <h2 class="fs-5 text-center">Daily Spending Limit</h2>
                             <hr class="text-white">
                             <div class="row">
-{#                                <p class="col">Current Date: {{ now }} </p>#}
-{#                                <p class="col">days left this month: {{ days_left }}</p>#}
                                 <h3 class="col text-center">${{ spending_limit|floatformat:2 }} per day</h3>
                             </div>
                         </div>
@@ -64,7 +62,6 @@
                                                 backgroundColor: [
                                                     '#f39c12',
                                                     '#1abc9c',
-                                                    
                                                 ],
                                                 borderColor: [
                                                     '#fff',
@@ -73,9 +70,6 @@
                                             }]
                                         },
                                         options: {
-                                            legend: {
-
-                                            },
                                             scales: {
                                                 y: {
                                                     beginAtZero: true
@@ -118,9 +112,6 @@
                                             }]
                                         },
                                         options: {
-                                            legend: {
-
-                                            },
                                             scales: {
                                                 y: {
                                                     beginAtZero: true
@@ -160,23 +151,39 @@
                                                     data: transactionAmount,
                                                     backgroundColor: [
                                                         '#1abc9c',
-                                                        '#16a085',
-                                                        '#2ecc71',
-                                                        '#27ae60',
-                                                        '#3498db',
-                                                        '#2980b9',
-                                                        '#9b59b6',
-                                                        '#8e44ad',
-                                                        '#f1c40f',
                                                         '#f39c12',
-                                                        '#e67e22',
+                                                        '#2980b9',
                                                         '#d35400',
-                                                        '#e74c3c',
-                                                        '#c0392b',
-                                                        '#ecf0f1',
                                                         '#bdc3c7',
-                                                        '#95a5a6',
+                                                        '#1abc9c',
+                                                        '#ecf0f1',
+                                                        '#e74c3c',
+                                                        '#3498db',
+                                                        '#e67e22',
+                                                        '#c0392b',
+                                                        '#dafc7b',
+                                                        '#27ae60',
+                                                        '#e67e22',
+                                                        '#8e44ad',
                                                         '#7f8c8d',
+                                                        '#caffbf',
+                                                        '#2ecc71',
+                                                        '#9b59b6',
+                                                        '#f39c12',
+                                                        '#f1c40f',
+                                                        '#34495e',
+                                                        '#16a085',
+                                                        '#dc9434',
+                                                        '#95a5a6',
+                                                        '#2c3e50',
+                                                        '#9bf6ff',
+                                                        '#ffadad',
+                                                        '#a0c4ff',
+                                                        '#fdffb6',
+                                                        '#a881ff',
+                                                        '#eb4d4b',
+                                                        '#ebe3d1',
+                                                        '#f20530'
                                                     ],
                                                 }]
                                         },
@@ -184,11 +191,6 @@
                                             scales: {
                                                 y: {
                                                     beginAtZero: true
-                                                },
-                                                x: {
-                                                    ticks: {
-                                                        maxTicksLimit: 2
-                                                    }
                                                 },
                                             }
                                         }
@@ -206,17 +208,17 @@
                             <h2 class="fs-5 text-center">Amount Planned, Received, and Remaining</h2>
                             <canvas id="myChart5"></canvas>
                             <script type="text/javascript">
-                            var labelNames = JSON.parse(document.getElementById('label_names').textContent)
-                            var labelAmountRec = JSON.parse(document.getElementById('label_amountRec').textContent)
-                            console.log('labelamount received', labelAmountRec)
-                            var labelAmountPlanned = JSON.parse(document.getElementById('label_amountPlanned').textContent)
-                            console.log('labelamount planned', labelAmountPlanned)
-                            var amountremaining = labelAmountPlanned.map(function(element, index){
-                                return element - labelAmountRec[index]
-                            }) 
-                            console.log(amountremaining)
-                            $(document).ready(function(){
-                                Chart.defaults.global.defaultFontColor = '#FFF';
+                                var labelNames = JSON.parse(document.getElementById('label_names').textContent)
+                                var labelAmountRec = JSON.parse(document.getElementById('label_amountRec').textContent)
+                                console.log('labelamount received', labelAmountRec)
+                                var labelAmountPlanned = JSON.parse(document.getElementById('label_amountPlanned').textContent)
+                                console.log('labelamount planned', labelAmountPlanned)
+                                var amountremaining = labelAmountPlanned.map(function (element, index) {
+                                    return element - labelAmountRec[index]
+                                })
+                                console.log(amountremaining)
+                                $(document).ready(function () {
+                                    Chart.defaults.global.defaultFontColor = '#FFF';
                                     var ctx = document.getElementById('myChart5').getContext('2d');
                                     var myLabel = new Chart(ctx, {
                                         type: 'line',
@@ -228,6 +230,7 @@
                                                     data: labelAmountPlanned,
                                                     fill: false,
                                                     backgroundColor: '#1abc9c',
+                                                    borderColor: '#1abc9c',
                                                     tension: 0.1
                                                 },
                                                 {
@@ -235,6 +238,7 @@
                                                     data: labelAmountRec,
                                                     fill: false,
                                                     backgroundColor: '#9b59b6',
+                                                    borderColor: '#9b59b6',
                                                     tension: 0.1
                                                 },
                                                 {
@@ -242,18 +246,15 @@
                                                     data: amountremaining,
                                                     fill: false,
                                                     backgroundColor: '#e67e22',
+                                                    borderColor: '#e67e22',
                                                     tension: 0.1
                                                 },
                                             ]
                                         },
                                         options: {
                                             scales: {
-
                                                 y: {
                                                     beginAtZero: true
-                                                },
-                                                x: {
-
                                                 },
                                             }
                                         }
